# 3dprint_website

./: .dockerignore  .gitignore  .goosehints  AGENTS.md  BACKEND_SETUP.md  DELIVERABLES.md  DESIGN_SPECS.md  DOCKER_README.md  FRONTEND_DOCS_INDEX.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PLAN_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  USER_GUIDE.md  docker-compose.yml  ecommerce.db  goose_recipes.txt
backend/: .pre-commit-config.yaml  Dockerfile  README.md  TEST_PLAN.md  alembic.ini  create_test_order.py  ecommerce.db  main.py  pyproject.toml  requirements.txt  seed_db.py
backend/alembic/: env.py
backend/alembic/versions/: 755b0cd12f97_add_user_model.py  c24fec326076_add_user_id_to_orders.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  health.py  orders.py  payments.py  products.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  order.py  product.py  user.py
backend/app/schemas/: order.py  product.py  user.py
backend/app/services/: order_service.py  payment_service.py  product_service.py  user_service.py
backend/app/utils/: email.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_orders.py  test_payments.py  test_products.py  test_user_orders.py  test_user_update.py  test_users.py
docs/: API_REFERENCE.md  BACKEND_SETUP.md  BACKEND_SUMMARY.md  BACKEND_TESTING_COMPLETE.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.txt  PASSWORD_RECOVERY_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  WORK_LOG.md
figma_design/: App.tsx  (+7 more)
(+41 files in other folders)
