[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3dprint-backend"
version = "0.1.0"
description = "FastAPI backend for 3D printing e-commerce platform"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Web Framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    # Database
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    # Data Validation
    "pydantic[email]==2.5.2",
    "pydantic-settings==2.1.0",
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[argon2,bcrpyt,bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    # API Documentation
    "python-multipart==0.0.6",
    # Environment
    "python-dotenv==1.0.0",
    # Payment (Optional for future)
    "stripe==7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[dependency-groups]
dev = [
    "httpx>=0.25.2",
    "pre-commit>=4.5.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
